Making sure fixed mode area doesn't wrap

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -48,7 +48,8 @@ body{
     height: unset;
     position: absolute;
     right: 0;
-    width: 14%;
+    width: 14%;    
+    min-width: 204px;
 }
 
 /* Console Section*/
